Komplettüberarbeitung von Innsmouth dank EAPoe

--- a/The Shadow over Innsmouth/disclaimer.tex
+++ b/The Shadow over Innsmouth/disclaimer.tex
@@ -6,4 +6,8 @@
 
 \vspace{18pt}
 
-Dank für ihre tatkräftige Unterstützung und Mithilfe bei der initialen Übersetzung geht unter anderem an die dunklen Hüter des Pulp Mirko \mbox{\glqq @ArkhamGazette\grqq}\ Stauch und Axel \glqq @Mr\_Lovecraft\grqq\ Weiß von $arkhaminsiders.com$, Edgar Alan \mbox{\glqq @DerAltePoet\grqq}\ Poe in seinem Kaminzimmer, Seine Heiligkeit, Papst Jens Bolm vom aldebaranischen Medienimperium $jmbverlag.de$, die unvergleichliche Erzählstimme Alexa \mbox{\glqq @BlackSweetStories\grqq}\ Waschkau, Christian \glqq @eazyliving\grqq\ Bednarek, den Gräber in der Tiefe Mirko \mbox{\glqq @DerBuddler\grqq}\ und den unaussprechlichen Lurch im Dunkeln, den sie nur flüsternd \textsc{Bartoschek} nennen.
+Dank für ihre tatkräftige Unterstützung und Mithilfe bei der initialen Übersetzung geht unter anderem an die dunklen Hüter des Pulp Mirko \mbox{\glqq @ArkhamGazette\grqq}\ Stauch und Axel \glqq @Mr\_Lovecraft\grqq\ Weiß von $arkhaminsiders.com$, Seine Heiligkeit, Papst Jens Bolm vom aldebaranischen Medienimperium $jmbverlag.de$, die unvergleichliche Erzählstimme Alexa \mbox{\glqq @BlackSweetStories\grqq}\ Waschkau, Christian \glqq @eazyliving\grqq\ Bednarek, den Gräber in der Tiefe Mirko \mbox{\glqq @DerBuddler\grqq}\ und den unaussprechlichen Lurch im Dunkeln, den sie nur flüsternd \textsc{Bartoschek} nennen.
+
+\vspace{12pt}
+
+Besonderer Dank geht Edgar Allan \mbox{\glqq @DerAltePoet\grqq}\ Poe in seinem Kaminzimmer, der mit seiner Lesung der ersten Version dieser Übersetzung meine Korrekturarbeiten stark vereinfacht und somit maßgeblich zur vorliegenden, überarbeiteten Fassung beigetragen hat.
